objects/Key_Player_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Roles_ID__c</fullName>
        <label>Contact Roles ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Criteria__c</fullName>
        <label>Decision Criteria</label>
        <referenceTo>Decision_Criteria__c</referenceTo>
        <relationshipLabel>Key Player Criteria</relationshipLabel>
        <relationshipName>Key_Player_Criteria</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Key_Player_Name__c</fullName>
        <formula>Key_Player__r.Contact__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Player Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Player__c</fullName>
        <label>Key Player</label>
        <referenceTo>Key_Player__c</referenceTo>
        <relationshipLabel>Key Player Criteria</relationshipLabel>
        <relationshipName>Key_Player_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Key Player Criteria</label>
    <nameField>
        <displayFormat>KPC-{000000}</displayFormat>
        <label>Key Player Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Player Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>